<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="error_empty_field">%s tidak boleh kosong!</string>
    <string name="error_username_rule">Username terdiri dari 5–13 karakter berupa huruf atau angka</string>
    <string name="error_rule_phone">No. Handphone harus terdiri dari 10–14 digit angka, diawali dengan 08 atau 628</string>
    <string name="error_rule_password_8chars">"Kata sandi minimal 8 karakter"</string>
    <string name="label_account_not_verified">Akun Belum Terverifikasi!</string>
    <string name="label_login_title">Masuk Akun Agree</string>
    <string name="label_register">Daftar</string>
    <string name="label_register_title">Daftar Akun</string>
    <string name="label_register_description"> Isi semua data untuk daftar akun &amp; saling kenal!</string>
    <string name="label_email_or_phone">Email/Nomor Handphone/Username</string>
    <string name="label_email_or_phone_placeholder">Masukkan email/nomor handphone/username</string>
    <string name="label_input_password">Masukkan kata sandi anda</string>
    <string name="label_forgot_password">Lupa Kata Sandi?</string>
    <string name="label_remember_me">Ingat Akun Saya</string>
    <string name="label_login">Masuk</string>
    <string name="label_login_next">Selanjutnya</string>
    <string name="label_command_register">Belum punya akun?</string>
    <string name="label_register_now"><u>Daftar</u></string>
    <string name="label_forgot_account">Pulihkan Akun</string>
    <string name="error_empty_email_rule">Email tidak boleh kosong</string>
    <string name="error_rule_email">Format email salah</string>
    <string name="error_phone_not_registered">No. Handphone yang anda masukkan tidak terdaftar</string>
    <string name="label_phone_number">No. Handphone</string>
    <string name="label_username">Nama Pengguna</string>
    <string name="label_username_placeholder">Masukkan nama pengguna Anda</string>
    <string name="label_fullname_placeholder">Masukkan nama lengkap Anda</string>
    <string name="label_phonenumber">No Handphone</string>
    <string name="label_telephone">No. Telepon</string>
    <string name="label_telephone_placeholder">Masukkan nomor telepon Anda</string>
    <string name="label_email">Email</string>
    <string name="label_email_address">Alamat Email</string>
    <string name="label_email_address_placeholder">Masukkan alamat email Anda</string>
    <string name="label_password">Kata Sandi</string>
    <string name="label_new_password">Kata Sandi Baru</string>
    <string name="label_password_placeholder">Minimal 8 karakter &amp; simbol</string>
    <string name="label_password_confirmation">Konfirmasi Kata Sandi</string>
    <string name="label_password_confirmation_placeholder">Ketik ulang kata sandi</string>
    <string name="label_tnc_checkbox">Dengan menekan tombol “Daftar”, saya menyetujui  Syarat Ketentuan &amp; Privasi yang berlaku di Agree.</string>
    <string name="label_tnc_checkbox_1">Saya setuju dengan</string>
    <string name="label_tnc_checkbox_2">Syarat dan Ketentuan</string>
    <string name="action_register">Daftar</string>
    <string name="label_command_login">Sudah punya akun? <a>Masuk</a></string>
    <string name="label_user_check">Username</string>
    <string name="error_username_registered">Username sudah terdaftar</string>
    <string name="label_email_check">Email</string>
    <string name="error_email_registered">Email sudah terdaftar</string>
    <string name="label_phone_check">Phone</string>
    <string name="error_phone_registered">No Handphone sudah terdaftar</string>
    <string name="error_empty_name_rule">Nama lengkap tidak boleh kosong</string>
    <string name="error_empty_field_must_filled">%s harus diisi</string>
    <string name="error_user_agreement">Anda belum menyetujui syarat dan ketentuan</string>
    <string name="error_alpha_only_name_rule">Nama lengkap tidak boleh terdapat angka</string>
    <string name="error_empty_username_rule">Username atau No.HP tidak boleh kosong</string>
    <string name="error_email_rule">Format email salah</string>
    <string name="error_regex_rule">Kata sandi minimal 8 karakter</string>
    <string name="error_password_empty">Kata sandi tidak boleh kosong</string>
    <string name="error_password_confirmation_empty">Konfirmasi kata sandi tidak boleh kosong</string>
    <string name="error_same_value">Konfirmasi kata sandi tidak sesuai</string>
    <string name="label_verification">Verifikasi Akun Anda</string>
    <string name="label_verification_description">Masukkan kode OTP verifikasi yang telah dikirimkan ke </string>
    <string name="label_send_again"><u>Kirim Ulang</u></string>
    <string name="action_verification">Verifikasi</string>
    <string name="label_code_not_empty">Kode OTP tidak boleh kosong</string>
    <string name="label_succes_change_password">Berhasil merubah kata sandi</string>
    <string name="label_changed_password">Perubahan Kata Sandi</string>
    <string name="label_changed_password_message">Agar akun anda tetap aman, silahkan lakukan perubahan kata sandi</string>
    <string name="label_error_otp">Kode OTP yang kamu masukkan tidak sesuai</string>
    <string name="label_change_password">Ubah Kata Sandi</string>
    <string name="label_password_new">Masukkan kata sandi baru anda</string>
    <string name="label_save_changes">Simpan Perubahan</string>
    <string name="label_change_password_dialog">Yakin ingin menyimpan perubahan kata sandi kamu?</string>
    <string name="action_yes">Ya</string>
    <string name="action_cancel">Batal</string>
    <string name="error_empty_rule_phone">No. HP tidak boleh kosong</string>
    <string name="error_email_not_registered">Email yang anda masukkan tidak terdaftar</string>
    <string name="label_call_cs">Butuh bantuan? <a>Hubungi Kami</a></string>
    <string name="label_forgot_account_title">Lupa Akun?</string>
    <string name="label_forgot_account_description">Pilih salah satu cara untuk memulihkan akun Anda</string>
    <string name="label_recovery_with_phone_number">Pulihkan Melalui No. Telepon</string>
    <string name="label_recovery_with_phone_number_subtitle">Masukkan nomor telepon yang terdaftar &amp; tunggu kode OTP verifikasi dari kami</string>
    <string name="label_recovery_with_phone_number_placeholder">Masukkan No. Handphone anda</string>
    <string name="label_recovery_with_email">Pulihkan Melalui Email</string>
    <string name="label_recovery_with_email_subtitle">Masukkan email yang terdaftar &amp; tunggu kode OTP verifikasi dari kami</string>
    <string name="label_recovery_with_email_placeholder">Masukkan alamat email anda</string>
    <string name="label_wrong_code">Kode OTP yang kamu masukkan tidak sesuai</string>
    <string name="label_onboard_headline1">Selamat Datang di Ekosistem Agree!</string>
    <string name="label_onboard_headline2">Makin Untung Gabung Kemitraan</string>
    <string name="label_onboard_headline3">Pinjam Modal dengan Mudah</string>
    <string name="label_onboard_headline_desc_1">Kemudahan berkolaborasi dengan pelaku, pembeli, pemodal, dan entitas pendukung ekosistem agrikultur dalam 1 aplikasi.</string>
    <string name="label_onboard_headline_desc_2">Gunakan berbagai fitur terintegrasi untuk memudahkan proses budidaya hingga penjualan.</string>
    <string name="label_onboard_headline_desc_3">Gunakan fitur permodalan untuk mendapatkan pinjaman yang aman dan keuntungan optimal.</string>
    <string name="label_change">Ubah</string>
    <string name="label_later">Nanti</string>
    <string name="label_first_step">Langkah 1/3</string>
    <string name="label_second_step">Langkah 2/3</string>
    <string name="label_third_step">Langkah 3/3</string>
    <string name="label_register_agree_title">Daftar Akun untuk Jelajahi Agree</string>
    <string name="label_fill_account_data">Lengkapi Data Akun</string>
    <string name="label_mr">Bapak</string>
    <string name="label_ms">Ibu</string>
    <string name="label_email_or_phone_number">Email/Nomor Handphone</string>
    <string name="label_email_or_phone_number_placeholder">Masukkan email/nomor handphone</string>
    <string name="action_next">Selanjutnya</string>
    <string name="error_max_full_name">Nama maks. 18 karakter</string>
    <string name="error_empty_email_no_handphone_rule">Email/nomor handphone tidak boleh kosong</string>
    <string name="error_email_no_handphone_not_valid">Email/nomor handphone tidak valid. Cek dan coba lagi.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_try_again">Coba Lagi</string>
    <string name="label_wrong_password">Kata Sandi Salah</string>
    <string name="label_wrong_password_description">Kamu sudah 5 kali gagal memasukan kata sandi, coba ubah kata sandi?</string>
    <string name="label_wrong_password_max">Sudah Batas Maksimal</string>
    <string name="label_wrong_password_max_description">Kamu sudah 15 kali gagal memasukan kata sandi, coba lagi dalam 60:00</string>
    <string name="error_password_rule">Kata sandi min. 8 karakter terdiri dari huruf besar, huruf kecil, angka, dan simbol</string>
    <string name="label_confirmation_password_matches">Konfirmasi kata sandi sesuai.</string>
    <string name="label_to_change_password">Masukkan Akun untuk Ubah Kata Sandi</string>
    <string name="label_send_verif_with_email_or_nohandphone">Kode/Tautan verifikasi akan dikirimkan melalui Email/Nomor handphone anda</string>
    <string name="label_error_password_min_8_character">Kata sandi min. 8 karakter dengan kombinasi huruf dan angka</string>
    <string name="label_success_password_matching">Konfirmasi kata sandi sesuai.</string>
    <string name="label_create_new_password">Buat Kata Sandi Baru</string>
    <string name="placeholder_input_new_password">Masukkan kata sandi baru</string>
    <string name="hint_confirmation_new_password">Konfirmasi Kata Sandi Baru</string>
    <string name="placeholder_input_confirmation_password">Masukkan konfirmasi kata sandi</string>
    <string name="button_save">Simpan</string>
    <string name="label_verify_register_with_email">Klik tautan verifikasi yang telah kami kirim ke %s</string>
    <string name="label_verify_reset_password_with_email">Klik tautan ubah kata sandi yang telah kami kirim ke %s</string>
    <string name="label_verify_with_phone_number">Masukkan 4 digit kode verifikasi yang telah dikirim ke %s</string>
    <string name="label_change_email">Ubah Email</string>
    <string name="label_change_phone_number">Ubah Nomor Handphone</string>
    <string name="label_send_link">Belum menerima tautan? Kirim ulang dalam %s</string>
    <string name="label_not_received_link">Belum menerima tautan? </string>
    <string name="label_send_code_otp">Belum menerima kode? Kirim ulang dalam %s</string>
    <string name="label_not_received_code">Belum menerima kode? </string>
    <string name="label_resend_link">Kirim Ulang Tautan</string>
    <string name="label_resend_code">Kirim Ulang Kode</string>

    <string name="label_username_or_phone">Nama Pengguna / No. Telepon</string>
    <string name="label_username_or_phone_placeholder">Masukkan nama pengguna / No. Telepon Anda</string>
    <string name="label_login_subtitle">Masukkan nama pengguna dan kata sandi terdaftar</string>
    <string name="label_offline_monitoring">Offline Monitoring</string>
</resources>
