<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <com.telkom.legion.component.toolbar.LgnToolbarWhite
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:id="@+id/containerRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="18dp">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/label_register_title"
                android:textAppearance="?attr/bodyLargeBold" />

            <TextView
                android:id="@+id/tvRegisterDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/black_font"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:text="@string/label_register_description"
                android:textAppearance="?attr/bodyLargeRegular" />

            <com.telkom.legion.component.textfield.LgnSingleField
                android:id="@+id/etFullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_fullname"
                android:inputType="text"
                app:isRequired="true"
                app:placeholderText="@string/label_fullname_placeholder"/>

            <com.telkom.legion.component.textfield.LgnSingleField
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_username"
                android:inputType="text"
                app:isRequired="true"
                app:placeholderText="@string/label_username_placeholder" />

            <com.telkom.legion.component.textfield.LgnSingleField
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_telephone"
                android:inputType="number"
                app:isRequired="true"
                app:placeholderText="@string/label_telephone_placeholder" />

            <com.telkom.legion.component.textfield.LgnSingleField
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email_address"
                android:inputType="textEmailAddress"
                app:isOptional="true"
                app:placeholderText="@string/label_email_address_placeholder" />

            <com.telkom.legion.component.textfield.LgnPasswordField
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                app:isRequired="true"
                app:placeholderText="@string/label_password_placeholder" />

            <com.telkom.legion.component.textfield.LgnPasswordField
                android:id="@+id/etPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password_confirmation"
                android:inputType="textPassword"
                app:isRequired="true"
                app:placeholderText="@string/label_password_confirmation_placeholder" />

            <com.telkom.legion.component.checkbox.LgnPrimaryCheckBox
                android:id="@+id/cbTnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_16dp"
                android:textColor="?attr/black_font"
                android:text="@string/label_tnc_checkbox"
                android:textAppearance="?attr/bodySmallRegular" />

            <com.telkom.legion.component.button.fill.LgnPrimaryFitButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:text="@string/action_register" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="16dp"
                android:textColor="?attr/black_font"
                android:text="@string/label_command_login"
                android:textAppearance="?attr/bodySmallRegular" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
