<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.telkom.legion.component.toolbar.LgnToolbarWhite
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/containerRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.telkom.legion.component.textfield.LgnPasswordField
            android:id="@+id/tilNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:errorEnabled="true"
            android:hint="@string/label_new_password"
            app:placeholderText="@string/label_password_new"/>

        <com.telkom.legion.component.textfield.LgnPasswordField
            android:id="@+id/tilPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:errorEnabled="true"
            android:hint="@string/label_password_confirmation"
            app:placeholderText="@string/label_password_new"/>


        <com.telkom.legion.component.button.fill.LgnPrimaryFitButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen_40dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/label_save_changes"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCallCs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:textAppearance="@style/BodySmallRegular"
        android:text="@string/label_call_cs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
