<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.menu.resetpassword.CreateNewPasswordFragment">

    <com.telkom.legion.component.toolbar.LgnToolbarWhite
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_0dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/label_third_step"
        android:textAppearance="?attr/bodyLargeSemiBold"
        android:textColor="?attr/colorTertiary_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/label_create_new_password"
        android:textAppearance="?attr/heading4"
        android:textColor="?attr/colorTertiary_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <LinearLayout
        android:id="@+id/containerRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.telkom.legion.component.textfield.LgnPasswordField
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_new_password"
            android:inputType="textPassword"
            app:errorEnabled="true"
            app:placeholderText="@string/placeholder_input_new_password" />

        <com.telkom.legion.component.textfield.LgnPasswordField
            android:id="@+id/etNewPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_confirmation_new_password"
            android:inputType="textPassword"
            app:errorEnabled="true"
            app:placeholderText="@string/placeholder_input_confirmation_password" />

        <com.telkom.legion.component.button.fill.LgnPrimaryFitButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:enabled="false"
            android:text="@string/button_save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
