<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.telkom.legion.component.toolbar.LgnToolbarWhite
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dimen_0dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvStep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_24dp"
                android:layout_marginTop="@dimen/dimen_32dp"
                android:text="@string/label_first_step"
                android:textAppearance="?attr/bodyLargeSemiBold"
                android:textColor="?attr/colorTertiary_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/label_register_agree_title"
                android:textAppearance="?attr/heading4"
                android:textColor="?attr/colorTertiary_700"
                app:layout_constraintEnd_toEndOf="@id/tvStep"
                app:layout_constraintStart_toStartOf="@id/tvStep"
                app:layout_constraintTop_toBottomOf="@id/tvStep" />

            <com.telkom.legion.component.textfield.LgnSingleField
                android:id="@+id/etEmail"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:hint="@string/label_email_or_phone_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:placeholderText="@string/label_email_or_phone_number_placeholder"/>

            <com.telkom.legion.component.button.fill.LgnPrimaryFitButton
                android:id="@+id/btnRegister"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_24dp"
                android:enabled="false"
                android:text="@string/action_next"
                app:layout_constraintEnd_toEndOf="@id/tvStep"
                app:layout_constraintStart_toStartOf="@id/tvStep"
                app:layout_constraintTop_toBottomOf="@id/etEmail" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@id/btnRegister"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/tvStep"
                app:layout_constraintStart_toStartOf="@id/tvStep"
                android:textColor="?attr/colorTertiary_500"
                android:text="@string/label_command_login"
                android:textAppearance="?attr/bodySmallRegular" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
